Bump felles junit5, + prosesstask bump (#556)